--- a/week1/templates/base.jinja2
+++ b/week1/templates/base.jinja2
@@ -2,7 +2,7 @@
 <title>{% block title %}{% endblock %} - Search with Machine Learning</title>
 <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <nav>
-  <h1><a href="{{ url_for("query") }}">Search with Machine Learning</a></h1>
+  <h1 class="top-bar"><a href="{{ url_for("query") }}" class="top-bar">Search with Machine Learning</a></h1>
   <ul>
   </ul>
 </nav>
