--- a/week1/templates/debug.jinja2
+++ b/week1/templates/debug.jinja2
@@ -9,7 +9,7 @@ function toggleDebug() {
 }
 
 </script>
-<button onclick="toggleDebug()">View Raw Response</button>
+<button class="blue" onclick="toggleDebug()">View Raw Response</button>
 <div id="debug-response">
   <pre>{{ search_response|tojson(indent=4) }}</pre>
 </div>
